# 2D-3D-Heat-Flow-CUDA

./: CMakeLists.txt  README.md
src/: heat2D3D.cu
