cmake_minimum_required(VERSION 3.9.1)
PROJECT(heat2D3D LANGUAGES CXX CUDA)
FIND_PACKAGE(CUDA QUIET REQUIRED)
ADD_EXECUTABLE(heat2D3D src/heat2D3D.cu)
TARGET_COMPILE_FEATURES(heat2D3D PUBLIC cxx_std_11)
set(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS})
set(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS})
target_link_libraries(heat2D3D)
